--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,17 @@ before_install:
 script:
  - docker run -e CI=true greendevops/docker_and_kubernetes_course npm run test
 
+deploy:
+ provider: elasticbeanstalk
+ region: "us-east-2"
+ app: "docker"
+ env: "Docker-env"
+ bucket_name: "elasticbeanstalk-us-east-2-002342766584"
+ bucket_path: "docker"
+ on:
+  branch: master
+ access_key_id: $AWS_ACCESS_KEY
+ secret_access_key:
+  secure: "$AWS_SECRET_KEY"
+ 
 language: node_js
